Unit test to compare FX versus JS (WIP)